# 03_rest_poco_server_pg

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  optimization.md
sql/: data.sql  queries.sql  schema.sql
src/: main.cpp
src/handler/auth/: auth_config.h  auth_middleware_handler.h  jwt_utils.h  login_handler.h  register_handler.h
src/handler/books/: create_book_handler.h  search_books_handler.h
src/handler/common/: http_json_utils.h  request_counter.h  router_factory.h
src/handler/loans/: create_loan_handler.h  get_user_loans_handler.h  return_loan_handler.h
src/handler/storage/: db_session.cpp  db_session.h  library_dto.h  postgres_storage.cpp  postgres_storage.h
src/handler/system/: metrics_handler.h  not_found_handler.h  swagger_handler.h
src/handler/users/: create_user_handler.h  find_user_by_login_handler.h  find_user_by_name_handler.h
tests/: run_api_tests.sh
